--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -8,7 +8,7 @@
       rgba(255, 255, 255, 0.5),
       rgba(255, 255, 255, 0.5)
     ),
-    url("https://images.pexels.com/photos/317355/pexels-photo-317355.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    url("https://images.squarespace-cdn.com/content/v1/5b398fb2f793925040070b55/1611787364505-CCWMOWOWOLOJJEZAYC09/Generalized+Anxiety+Disorder+Symptoms+Children?format=1000w");
   background-size: cover;
 }
 
